[front] Edit source tags

--- a/front/static/css/main.css
+++ b/front/static/css/main.css
@@ -31,6 +31,10 @@ li.list-group-item:hover .float-right .favorite {
     display: none;
 }
 
+.tags .badge {
+    font-size: 1rem;
+}
+
 /*
  * Sidebar
  */
