Logs fetch error

--- a/front/static/css/main.css
+++ b/front/static/css/main.css
@@ -14,6 +14,14 @@ li.list-group-item:hover {
     background-color: #d6d8db;
 }
 
+li.list-group-item.list-error {
+    border-color: #dc3545;
+}
+
+li.list-group-item.list-error .error {
+    color: #dc3545;
+}
+
 li.list-group-item .float-right .actions {
     display: none;
 }
