--- a/front/static/css/main.css
+++ b/front/static/css/main.css
@@ -172,14 +172,19 @@ li.list-group-item:hover .float-right .favorite {
     font-size: 16px;
 }
 
-.login form input[type="email"] {
+.login form input {
     margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
+    border-radius: 0;
 }
 
-.login form input[type="password"] {
+.login form input:first-of-type {
+    margin-bottom: -1px;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+}
+
+.login form input:last-of-type {
     margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
