--- a/front/static/css/main.css
+++ b/front/static/css/main.css
@@ -122,8 +122,12 @@ li.list-group-item:hover .float-right .favorite {
     text-decoration: underline;
 }
 
-.sidebar .nav-link.active {
+.sidebar .nav-item.active .nav-link {
     color: var(--primary);
+}
+
+.sidebar .nav-item.active .badge {
+    background-color: var(--primary);
 }
 
 .sidebar-heading {
