Ellipsys media file name

--- a/front/static/css/main.scss
+++ b/front/static/css/main.scss
@@ -69,6 +69,12 @@ li.list-group-item {
     }
 
     .medias {
+        li {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+
         a {
             color: var(--bs-body-color);
 
