Reduces svg full page size on md screen size

--- a/front/static/css/main.scss
+++ b/front/static/css/main.scss
@@ -322,6 +322,13 @@ li.list-group-item {
 
     svg {
         margin-right: 2rem;
+
+    }
+
+    @media (max-width: 768px ) /* md */ {
+        svg {
+            max-width: 168px;
+        }
     }
 }
 
