--- a/front/static/css/main.scss
+++ b/front/static/css/main.scss
@@ -229,6 +229,20 @@ li.list-group-item {
     font-size: 1rem;
     background-color: rgba(0, 0, 0, .25);
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
+
+    svg {
+        animation: loader 1.5s infinite;
+    }
+}
+
+@keyframes loader {
+    0% {
+        rotate: 0deg;
+    }
+
+    100% {
+        rotate: 360deg;
+    }
 }
 
 .navbar .navbar-toggler {
