--- a/front/static/css/main.scss
+++ b/front/static/css/main.scss
@@ -36,12 +36,19 @@ a:hover {
 }
 
 li.list-group-item {
+    --table-striped-color: var(--bs-emphasis-color);
+    --table-striped-bg: rgba(var(--bs-emphasis-color-rgb), 0.05);
+    --table-hover-color: var(--bs-emphasis-color);
+    --table-hover-bg: rgba(var(--bs-emphasis-color-rgb), 0.075);
+
     &:nth-child(even) {
-        background-color: var(--bs-light);
+        color: var(--table-striped-color);
+        background-color: var(--table-striped-bg);
     }
 
     &:hover {
-        background-color: #d6d8db;
+        color: var(--table-hover-color);
+        box-shadow: inset 0 0 0 9999px var(--table-hover-bg);
     }
 
     .error {
@@ -170,11 +177,11 @@ li.list-group-item {
     left: 0;
     z-index: 100; /* Behind the navbar */
     padding: 48px 0 0; /* Height of navbar */
-    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+    box-shadow: inset -1px 0 0 var(--bs-border-color-translucent);
 
     .nav-link {
         font-weight: 500;
-        color: #333;
+        color: var(--bs-secondary);
 
         &:hover {
             text-decoration: underline;
@@ -250,6 +257,10 @@ li.list-group-item {
     right: 1rem;
 }
 
+.nav-item.dropdown {
+    margin-top: 10px;
+}
+
 .form-control-dark {
     color: var(--bs-white);
     background-color: rgba(255, 255, 255, .1);
@@ -262,7 +273,7 @@ li.list-group-item {
 }
 
 .tags-input {
-    background-color: var(--bs-white);
+    background-color: var(--bs-body-bg);
     display: flex;
 
     .badge {
@@ -290,7 +301,7 @@ li.list-group-item {
     display: flex;
     align-items: center;
     text-align: center;
-    background-color: var(--bs-light);
+    background-color: var(--bs-body-bg);
     height: 100%;
 
     form {
@@ -328,7 +339,7 @@ li.list-group-item {
 .full-page {
     display: flex;
     align-items: center;
-    color: lightgray;
+    color: var(--bs-secondary-bg);
     height: 100%;
     width: 100%;
     max-width: 512px;
