Adds padding under pagination

--- a/front/static/css/main.scss
+++ b/front/static/css/main.scss
@@ -17,6 +17,10 @@ main {
         margin-top: 1rem;
         margin-right: 1rem;
     }
+
+    .pagination {
+        padding-bottom: 1rem;
+    }
 }
 
 a, a.btn:hover {
