Improves nav-link visibility

--- a/front/static/css/main.scss
+++ b/front/static/css/main.scss
@@ -185,7 +185,7 @@ li.list-group-item {
 
     .nav-link {
         font-weight: 500;
-        color: var(--bs-secondary);
+        color: var(--bs-secondary-text-emphasis);
 
         &:hover {
             text-decoration: underline;
