--- a/front/static/css/main.scss
+++ b/front/static/css/main.scss
@@ -266,9 +266,12 @@ li.list-group-item {
 }
 
 .form-control-dark {
-    color: var(--bs-white);
-    background-color: rgba(255, 255, 255, .1);
-    border-color: rgba(255, 255, 255, .1);
+    background-color: var(--bs-gray-900);
+    border-color: var(--bs-gray-700);
+
+    &::placeholder {
+        color: rgba(222, 226, 230, 0.75);
+    }
 
     &:focus {
         border-color: transparent;
