Fixes bottom space

--- a/front/static/css/main.scss
+++ b/front/static/css/main.scss
@@ -6,7 +6,7 @@ main {
     padding: 1rem;
 
     ul.list-group {
-        margin-bottom: 1rem;
+        padding-bottom: 1rem;
     }
 
     > .btn-primary, > .card > .card-body > .btn-primary {
