Fixes badge margin

--- a/front/static/css/main.scss
+++ b/front/static/css/main.scss
@@ -67,6 +67,7 @@ li.list-group-item {
 
     .badge {
         font-weight: 400;
+        margin-right: .5rem;
         vertical-align: middle;
         font-size: 100%;
     }
